--- a/sass/module/_pageBtn.scss
+++ b/sass/module/_pageBtn.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
 		pagesBtn
 \*------------------------------------*/
-#pagesBtn {
+.pages_btn {
 	height: 70px;
 	margin: 30px auto 0px;
 	text-align: center;
@@ -10,14 +10,17 @@
 		float: right;
 	}
 	li {
-		width: 30px;
-		height: 30px;
+		width: 30px !important;
+		height: 30px !important;
 		background: #fff;
 		display: block;
-		border: 1px solid $normal_color;
+		border: 1px solid $normal_color2;
 		margin-right: 5px;
 		text-align: center;
 		line-height: 30px;
+		float: left;
+		@include circle(30px);
+		position: relative;
 		&.active {
 			background: $normal_color2;
 			&>a {
@@ -25,7 +28,44 @@
 			}
 		}
 		&:hover {
-			background: $normal_color2;
+			background: $normal_color;
+			border: 1px solid $normal_color;
+			&>a {
+				color: #fff;
+			}
+		}
+		&.number {
+			&:hover {
+				&:after {
+					@include psudoClass;
+					@include triBtm($normal_color, 10px, 9px);
+					position: absolute;
+					bottom: -6px;
+					left: 4px;
+				}
+			}
+		}
+		&.prev {
+			border: none;
+			padding: 6px;
+			background: none;
+			&>a {
+				@include triPrev($normal_color, 10px);
+			}
+			&:hover {
+				background: none;
+			}
+		}
+		&.next {
+			border: none;
+			padding: 6px;
+			background: none;
+			&>a {
+				@include triNext($normal_color, 10px);
+			}
+			&:hover {
+				background: none;
+			}
 		}
 	}
 	.page_select {
@@ -49,12 +89,13 @@
 	}
 	a {
 		display: block;
-		color: #000;
+		color: $normal_color;
 		font-size: 15px;
 		font-family: $normal_font;
+		font-weight: bolder;
 		line-height: 30px;
 		&:hover {
-			color: #fff;
+			@include scale(1.1);
 		}
 	}
 }
