--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -17,7 +17,8 @@ $header_h: 73px;
 //------------------------------------*/
 //project
 $normal_color: #0068b7;
-$normal_color2: #5d615e;
+$normal_color2: #fdd209;
+$normal_color3: #e67800;
 
 $logo_color1: #6EB92B;
 $logo_color2: #5C605D;
