--- a/sass/_CAROUSEL.scss
+++ b/sass/_CAROUSEL.scss
@@ -1,36 +1,49 @@
 #hcarousel {
   width: 100%;
-  min-height: 520px;
+  // min-height: 520px;
   position: relative;
   background: transparent;
 }
 
-#hcarouselcontrols {
-  position: absolute;
-  bottom:0;
+.h_carousel_controls {
+  // position: absolute;
+  // bottom:0;
   width:100%;
+  height: 15px;
+  @include bg(lighten($normal_color, 5%));
+  border-bottom: 1px solid $Grey_color1;
 }
 
+.flexslider, .slides, .slides li {
+	width: 100%;
+}
 .flexslider {
 	border: 0;
 	background-color: transparent;
 	border-radius: 0;
-	margin-bottom:30px!important;
+	margin-bottom: 1em !important;
 	@include box-shadow(none);
 	.slides {
+		width: 100%;
+		height: 0;
+		padding-bottom: 21.61%;
+		border-bottom: 1px solid #fff;
 		&>li {
-		height: 400px;
-		background-size:cover;
-		background-position:50% 30%;
+			width: 100%;
+			height: 0;
+			padding-bottom: 21.61%;
+			background-size:cover;
+			background-position:50% 50%;
 		}
 	}
 }
 
 .flex-control-nav {
   width: auto;
-  bottom: auto;
-  right: 118px;
-  bottom:20px;
+  // bottom: auto;
+  // right: 118px;
+  bottom: -18px;
+  right: 0;
   z-index:20;
   position: absolute;
   text-align: center;
@@ -46,7 +59,7 @@
 	.flex-prev, .flex-next {
 		@include wh(41px);
 		display: inline-block;
-		background: url('../images/iconTxt.png') no-repeat;
+		// background: url('../images/iconTxt.png') no-repeat;
 		opacity: 1;
 		left: auto;
 		right: auto;
@@ -65,15 +78,23 @@
 		}
 	}
 }
-.flex-control-paging li a{
-	@include wh(11px);
-	background: rgba(176,220,213,0.5);
-}
 
-.flex-control-paging li a.flex-active,
-.flex-control-paging li a:hover {
-  background: rgba(176,220,213,1);
-  @include box-shadow(1px 1px 3px #ccc);
+.flex-control-paging {
+	li {
+
+		a {
+			// @include wh(11px);
+			@include circle(10px);
+			// background: rgba(#fff,0.5);
+			@include bg(#fff);
+			&.flex-active, &:hover {
+				// background: rgba(#fff799,1);
+				@include bg(#fff799);
+				@include box-shadow(1px 1px 3px darken($normal_color, 10%));
+				@include scale(1.1);
+			}
+		}
+	}
 }
 
 .slides .well{
@@ -90,64 +111,3 @@
   opacity: 1;
 }
 
-.flex-caption {
-	width: 440px;
-	position: absolute;
-	bottom: -120px;
-	color: #fff;
-	text-align: center;
-	text-transform: uppercase; 
-	border:none;
-	background:transparent;
-	margin:0;
-	tr {
-		background:transparent;
-	}
-	td {
-		background: rgba(161, 144, 100, 0.65);
-		vertical-align:middle;
-		border:none;
-		padding:0;
-		&.top {
-			height:235px;
-		}
-		&.bottom {
-			height:120px;
-		}
-	}
-	h1, a {
-		color: #fff;
-		text-transform: uppercase;
-	}
-	h1, p {
-		padding:0 10%;
-		margin:0;
-	}
-	h1 {
-		background:transparent;
-		font-size:50px;
-		font-family: $normal_font;
-		letter-spacing: 10px;
-		line-height:1.1;
-	}
-	p {
-		width:100%;
-		bottom:0;
-		color:#fff;
-		font-size: 16px;
-		font-family: $normal_font;
-		text-align: center;
-	}
-}
-
-#promo-adjacent {
-  width: 450px;
-  float:right;
-  margin:0;
-  z-index: 1000;
-  /*font*/
-  color: #888;
-  font-size: $fz-N;
-  font-variant: normal !important;
-  line-height: 1.36; 
-}
