--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -19,6 +19,7 @@ $header_h: 73px;
 $normal_color: #0068b7;
 $normal_color2: #fdd209;
 $normal_color3: #e67800;
+$normal_color4: #af1355;
 
 $logo_color1: #6EB92B;
 $logo_color2: #5C605D;
@@ -45,6 +46,7 @@ $Grey_color3: #6b6b6b;
 $Grey_color4: #9b9b9b;
 $Grey_color5: #dddddd;
 $Grey_color6: #b6b6b6;
+$Grey_color7: #e3e2e2;
 
 
 
