--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,9 +7,23 @@
 /*
 * TOC
 * 
+* _Layout
 * btn
 * form input textarea
 * loading
+* Header
+* Footer
+* nav
+* banner
+* mod
+* AsideMod
+* CntMod
+* Index_page
+* BookList_page
+* BookList_page
+* book
+* lesson
+* font    icon
 */
 
 @import "_variable";
@@ -27,9 +41,16 @@
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
-		
+		>	_Initial
 \*------------------------------------------------------------------------*/
 @import "_Initial";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	_Layout
+\*========================================================================*/
+@import "project/_Layout";
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
@@ -78,18 +99,20 @@
 	&:active {
 		@include hover;
 	}
-	form.dataForm & {
-		display: inline-block;
+	&-IPC {
+		@include bg($normal_color);
+		box-shadow: inset 0px 0px 13px rgba(#242c56, 0.3);
+		border-radius: 10px;
 		input {
-			padding: 6px 18px;
+			color: $normal_color2;
+			font-family: $normal_font2;
+			font-weight: bolder;
 		}
 	}
 }
-.submit_btn {
-	margin-right: 10px;
-}
 
 // @import "_materialBtn";
+
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
@@ -101,14 +124,14 @@ form input[type="password"],
 form input[type="telephone"],
 form textarea,
 form select {
-	max-width:500px;
+	// max-width:500px;
 	height: 30px;
 	background:#f4f4f4;
 	border:2px solid #bec2c5;
-	padding:4px 0;
+	// padding:4px 0;
 	color:#303030;
-	text-indent:8px;
-	@include box-shadow(inset 3px 3px 0 rgba(0,0,0,0.06));
+	// text-indent:8px;
+	@include box-shadow(inset 1px 3px 5px 0px rgba(0,0,0,0.4));
 }
 form select {
 	@include box-shadow(none);
@@ -152,10 +175,206 @@ form select {
 //   opacity: 0.5;
 // }
 
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	Header
+\*========================================================================*/
+@import "project/_Header";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	Footer
+\*========================================================================*/
+@import "project/_Footer";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	nav
+\*========================================================================*/
+.nav-IPC {
+	&:first-of-type {
+		border-left: 1px solid #0c7db5;
+	}
+	&:last-of-type {
+		border-right: 1px solid #26a8e7;
+	}
+	a {
+		color: #fff;
+		padding: 0 1em;
+		border-left: 1px solid #26a8e7;
+		border-right: 1px solid #0c7db5;
+		@include transition(all 0.3s $easeInOutCubic);
+	}
+	&:hover {
+		a {
+			color: $normal_color2;
+			text-shadow: -1px -1px 3px darken($normal_color2, 20%);
+		}
+	}
+}
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	banner
+\*========================================================================*/
+.banner {
+	margin-top: 1px;
+}
+@import "_CAROUSEL";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	mod
+\*========================================================================*/
+.tag_vertical {
+	overflow: hidden;
+	position: relative;
+	.showbox, .menu {
+		position: absolute;
+	}
+	.showbox {
+		a {
+			display: block;
+		}
+	}
+	.menu {
+		top: 0;
+	}
+}
+
+@import "module/_tabs";
+
+@import "project/_MOD";
 
 
 /*------------------------------------------------------------------------*\
 /*------------------------------------------------------------------------*\
 /*========================================================================*\
-		>	
+		>	AsideMod
 \*========================================================================*/
+@import "project/_AsideMod";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	CntMod
+\*========================================================================*/
+@import "project/_CntMod";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	CntModBd
+\*========================================================================*/
+@import "project/_CntModBd";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	Index_page
+\*========================================================================*/
+@import "project/_Index_page";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	BookList_page
+\*========================================================================*/
+@import "project/_BookList_page";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	BookList_page
+\*========================================================================*/
+@import "project/_BookCnt_page";
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	book
+\*========================================================================*/
+%fontStyle1 {
+	@include adjust-font-size-to(13px);
+	color: #666;
+}
+.book {
+	&-name {
+		@include adjust-font-size-to(13px, 0.7);
+		color: $normal_color;
+		font-weight: bolder;
+	}
+	&-auth {
+		@extend %fontStyle1;
+	}
+	&-price {
+		@extend %fontStyle1;
+	}
+	&-pre_price {
+		@extend %fontStyle1;
+	}
+}
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	lesson
+\*========================================================================*/
+.lesson {
+	&-name {
+		@include adjust-font-size-to(17px, 0.9);
+		@include adjust-leading-to(0.9);
+		text-shadow: 0px 0px 1px $Grey_color1;
+	}
+	&-cnt {
+		@include adjust-font-size-to(13px, 0.75);
+	}
+}
+
+
+/*------------------------------------------------------------------------*\
+/*------------------------------------------------------------------------*\
+/*========================================================================*\
+		>	font    icon
+\*========================================================================*/
+.txt {
+	&-r {
+		color: #f20101;
+		font-size: 1.3em;
+		font-weight: bolder;
+	}
+	&-b {
+		color: $normal_color;
+	}
+	&-b1 {
+		color: #0067c0;
+	}
+	&-bk {
+		color: #221815;
+	}
+	&-bk1 {
+		color: #000;
+	}
+	&-new {
+		color: $normal_color;
+		font-size: 1.1em;
+		text-transform: uppercase;
+		text-shadow: none;
+	}
+	&-ora {
+		color: #ffac28;
+	}
+	&-ora1 {
+		color: #e67800;
+	}
+}
+.fa-angle-left, .fa-angle-right {
+	color: #fff;
+	@include scale(1.1);
+}
+
