--- a/sass/module/_tabs.scss
+++ b/sass/module/_tabs.scss
@@ -1,102 +1,63 @@
-#main nav {
-	@at-root {
-		ul.tabs {
-			width: 100%;
-			height: 32px;
-			position: relative;
-			z-index: 1;
-			li {
-				@include wh(185px, 35px);
-				@include bgImg('icons.png');
-				@include bg(-186px, -68px);
-				float: left;
-				overflow: hidden;
-				position: relative;
-				margin-bottom: -1px;
-				&:before {
-					@include wh(10px, 14px);
-					@include psudoClass;
-					@include bgImg('icons.png');
-					@include bg(-120px, -34px);
-					display: inline-block;
-					position: absolute;
-					top:12px;
-					left: 35px;
-				}
-				&:hover,
-				&.active {
-					@include bg(0, -68px);
-					&:before {
-						@include bg(-120px, 0);
-					}
-					a.tab_item1 {
-						@include bg(11px, -25px);
-					}
-					a.tab_item2 {
-						@include bg(-97px, -25px);
-					}
-				}
-			}
-			a[class*="tab_item"] {
-				@include wh(115px, 100%);
-				@include bgImg('txts.png');
-				display: block;
-				margin: 0 auto 0 45px;
-				color: #fff;
-				font-size: 15px;
-				text-decoration: none;
-			}
-			@each $item, $x, $y, $x1, $y1 in (tab_item1, 11px, -25px, 11px, -66px),
-											 (tab_item2, -97px, -25px, -97px, -66px) {
-											 	a.#{$item} {
-											 		@include bg(#{$x1}, #{$y1});
-											 		&:hover {
-											 			@include bg(#{$x}, #{$y});
-											 		}
-											 	}
-											 }
-		}
-	}//at-root > ul.tabs
+$tabsUlH: 32px;
 
+.tab_block {
+	// width: 650px;
+	width: 100%;
+	margin: 10px 0;
+	position: relative;
+	// float: right;
+	// @at-root {
+	ul.tabs {
+		width: 100%;
+		height: $tabsUlH;
+		position: relative;
+		z-index: 1;
+		li {
+			@include wh(auto, 100%);
+			// @include bg(#e1e1e1);
+			float: left;
+			// overflow: hidden;
+			position: relative;
+			// margin-bottom: -1px;
+			&:hover, &.active {
+				a {
+					color: #b3175a;
+				}
+			}
+		}
+		a {
+			@include wh;
+			display: block;
+			// margin: 0 auto 0 45px;
+			color: #fff;
+			font-size: 15px;
+			text-decoration: none;
+			text-align: center;
+		}
+
+	}
+	// }//at-root > ul.tabs
 }
+
+
 div.tab_container {
 	clear: left;
-	width: 580px;
-	// width: 100%;
+	width: 100%;
 	// background: #fff;
-	position: absolute;
-	// top: -2px;
-	z-index: 0;
+	position: relative;
+	z-index: 1;
 	right: 0;
-	top: 40px;
-}
-.tab_content {
-	min-height: 170px;
-	padding: 15px 10px 10px;
-	section {
+	// top: $tabsUlH;
+	// padding-top: $tabsUlH;
+	.tab_content {
 		width: 100%;
-		min-height: 42px;
-		background: none;
-		border: none;
-		@include box-shadow(rgba(0, 0, 0, 0) 0 0 0);
-		&.aa {
-			border-bottom: 1px dotted #777;
-		}
-		&:after {
-			display: none;
-		}
-		span {
-			color: #777;
-			font-weight: bold;
-			float: left;
-		}
-		p {
-			color: #777;
-			padding-left: 30px;
-		}
+		min-height: 170px;
+		padding: 15px 10px 10px;
+		position: relative;
+		top: 0;
 	}
-}
-div.tab_container .tab_content h2 {
-	margin: 0 0 20px;
+	h2 {
+		margin: 0 0 20px;
+	}
 }
 
